# nfl-predictor

./: README.md
nfl_predictor/: README.md  pyproject.toml  report.md
nfl_predictor/src/nfl_predictor/: crew.py  main.py
nfl_predictor/src/nfl_predictor/config/: agents.yaml  tasks.yaml
